--- a/WebApplication33/SearchIntegration/SearchIntegration.csproj
+++ b/WebApplication33/SearchIntegration/SearchIntegration.csproj
@@ -99,7 +99,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="JSON\burgers.json" />
-    <Content Include="scripts\jquery-2.2.0.min.map" />
+    <None Include="scripts\jquery-2.1.4.intellisense.js" />
+    <Content Include="scripts\jquery-2.1.4.js" />
+    <Content Include="scripts\jquery-2.1.4.min.js" />
+    <Content Include="scripts\jquery-2.1.4.min.map" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -108,12 +111,14 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Images\Drink.png" />
+    <Content Include="Images\Hamburger.png" />
+    <Content Include="Images\Pizza.png" />
+    <Content Include="Images\Subs.PNG" />
     <Content Include="index.html" />
     <Content Include="scripts\ai.0.15.0-build58334.js" />
     <Content Include="scripts\ai.0.15.0-build58334.min.js" />
-    <None Include="scripts\jquery-2.2.0.intellisense.js" />
-    <Content Include="scripts\jquery-2.2.0.js" />
-    <Content Include="scripts\jquery-2.2.0.min.js" />
+    <Content Include="scripts\menuBurgerPalace.js" />
     <Content Include="Styles\burgerStyle.css" />
     <Content Include="Web.config" />
   </ItemGroup>
